# helpdesk

./: .gitignore  README.md  apps.txt  install_frappe_apps.sh  setup.sh
.codex/: config.json
.github/: setup.sh
Downloads/Repo/O3ON Meeting Assistant/: .env.example  .gitignore  README.md  package.json  tsconfig.base.json
Downloads/Repo/O3ON Meeting Assistant/docs/: ARCHITECTURE.md  HOSTING.md  OPERATIONS.md  SECURITY_REVIEW.md  SETUP.md  USER_GUIDE.md
Downloads/Repo/O3ON Meeting Assistant/infra/: docker-compose.yml  init-minio.sh
Downloads/Repo/O3ON Meeting Assistant/services/audio-worker/: Dockerfile  README.md  pyproject.toml
Downloads/Repo/O3ON Meeting Assistant/services/audio-worker/src/audio_worker/: __init__.py  cli.py  config.py  engine.py  models.py  provider.py  server.py
Downloads/Repo/O3ON Meeting Assistant/services/audio-worker/src/audio_worker/pipeline/: __init__.py  chunk.py  diarize.py  normalize.py  summarize.py  transcribe.py
Downloads/Repo/O3ON Meeting Assistant/services/audio-worker/tests/: conftest.py  test_chunk.py  test_config.py  test_pipeline.py  test_provider.py
RabitMQCommunication/QueueComm/: DrainDispatcher.cs
desk/: vite.config.js
desk/src/: telemetry.ts  types.ts  utils.ts
desk/src/components/: TimeEntryBox.vue  index.ts
desk/src/components/knowledge-base/: CategoryModal.vue
desk/src/components/layouts/: layoutSettings.ts
desk/src/components/ticket/: SidebarTimer.vue  TicketAgentActivities.vue  TicketAgentSidebar.vue  TicketTimeEntry.vue  index.ts  (+1 more)
desk/src/router/: index.ts
desk/src/stores/: timeEntry.ts
(+87 files in other folders)
