[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o3on-meeting-audio-worker"
version = "0.1.0"
description = "Audio worker scaffold for Serbian meeting transcription and minutes generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "O3ON" }
]
dependencies = []

[project.optional-dependencies]
diarization = ["pyannote.audio>=3.1", "torch>=2.0"]

[project.scripts]
audio-worker = "audio_worker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]
ignore = ["E501"]

